Wed Sep 15 15:51:01 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_operation/operation_ih.cpp:
        * TAO_IDL/be/be_visitor_operation/operation_is.cpp:
        * TAO_IDL/be/be_visitor_operation/operation_exs.cpp:
        
          Skip traversal if the operation is an AMI sendc_* implied
          IDL addition. The CORBA servant impl and CCM executor
          classes should not be providing these (empty) operations
          for the application developer to fill in.
          
        * TAO_IDL/be/be_visitor_interface/interface_ih.cpp:
        
          Cosmetic changes.

Wed Sep 15 13:07:39 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/pidl_install.mpb:
        * tao/pidl_install.mpb:
          Moved from tao to MPC/config

Wed Sep 15 11:32:04 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/AnyTypeCode/AnyTypeCode.mpc:
        * tao/BiDir_GIOP/BiDir_GIOP.mpc:
        * tao/CSD_Framework/CSD_Framework.mpc:
        * tao/CSD_ThreadPool/CSD_ThreadPool.mpc:
        * tao/CodecFactory/CodecFactory.mpc:
        * tao/Codeset/Codeset.mpc:
        * tao/Compression/Compression.mpc:
        * tao/DiffServPolicy/DiffServPolicy.mpc:
        * tao/DynamicAny/DynamicAny.mpc:
        * tao/DynamicInterface/DynamicInterface.mpc:
        * tao/ETCL/TAO_ETCL.mpc:
        * tao/EndpointPolicy/EndpointPolicy.mpc:
        * tao/IFR_Client/IFR_Client.mpc:
        * tao/IORInterceptor/IORInterceptor.mpc:
        * tao/IORManipulation/IORManipulation.mpc:
        * tao/IORTable/IORTable.mpc:
        * tao/ImR_Client/ImR_Client.mpc:
        * tao/Messaging/Messaging.mpc:
        * tao/Monitor/Monitor.mpc:
        * tao/ObjRefTemplate/ObjRefTemplate.mpc:
        * tao/PI/PI.mpc:
        * tao/PI_Server/PI_Server.mpc:
        * tao/PortableServer/PortableServer.mpc:
        * tao/RTCORBA/RTCORBA.mpc:
        * tao/RTPortableServer/RTPortableServer.mpc:
        * tao/RTScheduling/RTScheduler.mpc: